exports[`<Dashboard /> renders correctly with black theme 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX dZFqcM">
    <a
      className="sc-ifAKCX gCKhyf"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb fGPksR">
      <button
        className="fa fa-bars sc-bdVaJa beLtwZ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC mvnZI">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac DasKa"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC hIVrtF" />
</div>
`;

exports[`<Dashboard /> renders correctly with black-light theme 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX dZFqcM">
    <a
      className="sc-ifAKCX gCKhyf"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb fGPksR">
      <button
        className="fa fa-bars sc-bdVaJa beLtwZ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC bGgrrJ">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac gNnmPl"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC jsOlaO" />
</div>
`;

exports[`<Dashboard /> renders correctly with blue theme 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX gnZuMN"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC mvnZI">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac DasKa"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC hIVrtF" />
</div>
`;

exports[`<Dashboard /> renders correctly with blue-light theme 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX gnZuMN"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC bGgrrJ">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac gNnmPl"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC jsOlaO" />
</div>
`;

exports[`<Dashboard /> renders correctly with fixed and sidebarMini options 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX fBGbcj">
    <a
      className="sc-ifAKCX gnZuMN"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC hfDpYe">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac eirIAT"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC hIVrtF" />
</div>
`;

exports[`<Dashboard /> renders correctly with fixed option 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX fBGbcj">
    <a
      className="sc-ifAKCX gnZuMN"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC hfDpYe">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac eirIAT"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC hIVrtF" />
</div>
`;

exports[`<Dashboard /> renders correctly with fixed, initialCollapse, and sidebarMini options 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX fBGbcj">
    <a
      className="sc-ifAKCX eGsiFE"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje bSbLWf"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM grAVBT"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb jHIWoV">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC bssGBJ">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac kTqlab"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC fvMOBO" />
</div>
`;

exports[`<Dashboard /> renders correctly with green theme 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX fQHIGA"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb kigmzE">
      <button
        className="fa fa-bars sc-bdVaJa gicuGo"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC mvnZI">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac DasKa"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC hIVrtF" />
</div>
`;

exports[`<Dashboard /> renders correctly with green-light theme 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX fQHIGA"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb kigmzE">
      <button
        className="fa fa-bars sc-bdVaJa gicuGo"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC bGgrrJ">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac gNnmPl"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC jsOlaO" />
</div>
`;

exports[`<Dashboard /> renders correctly with initialCollapse and sidebarMini options 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX eGsiFE"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje bSbLWf"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM grAVBT"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb jHIWoV">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC jpdOXb">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac lnXLKC"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC fvMOBO" />
</div>
`;

exports[`<Dashboard /> renders correctly with initialCollapse option 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX gnZuMN"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC dbAPkL">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac dmNFwB"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC cOGHtI" />
</div>
`;

exports[`<Dashboard /> renders correctly with no options 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX gnZuMN"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC mvnZI">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac DasKa"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC hIVrtF" />
</div>
`;

exports[`<Dashboard /> renders correctly with purple theme 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX fwdUUX"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb jwLIpi">
      <button
        className="fa fa-bars sc-bdVaJa cKgFyI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC mvnZI">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac DasKa"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC hIVrtF" />
</div>
`;

exports[`<Dashboard /> renders correctly with purple-light theme 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX fwdUUX"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb jwLIpi">
      <button
        className="fa fa-bars sc-bdVaJa cKgFyI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC bGgrrJ">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac gNnmPl"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC jsOlaO" />
</div>
`;

exports[`<Dashboard /> renders correctly with red theme 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX jSovmm"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb kuJgEm">
      <button
        className="fa fa-bars sc-bdVaJa jxNjZi"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC mvnZI">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac DasKa"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC hIVrtF" />
</div>
`;

exports[`<Dashboard /> renders correctly with red-light theme 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX jSovmm"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb kuJgEm">
      <button
        className="fa fa-bars sc-bdVaJa jxNjZi"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC bGgrrJ">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac gNnmPl"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC jsOlaO" />
</div>
`;

exports[`<Dashboard /> renders correctly with sidebarMini option 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX gnZuMN"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC mvnZI">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac DasKa"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC hIVrtF" />
</div>
`;

exports[`<Dashboard /> renders correctly with yellow theme 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX FpDji"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb hWVPkT">
      <button
        className="fa fa-bars sc-bdVaJa dDYcHZ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC mvnZI">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac DasKa"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC hIVrtF" />
</div>
`;

exports[`<Dashboard /> renders correctly with yellow-light theme 1`] = `
<div
  className="sc-fMiknA kzKKbV">
  <header
    className="sc-kpOJdX bMoDGb">
    <a
      className="sc-ifAKCX FpDji"
      href="/"
      name="navbar-logo">
      <div
        className="sc-EHOje cdEqWa"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </div>
      <div
        className="sc-bZQynM jPpCfL"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </div>
    </a>
    <nav
      className="sc-bxivhb hWVPkT">
      <button
        className="fa fa-bars sc-bdVaJa dDYcHZ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-hzDkRC bGgrrJ">
    <section
      className="sc-bRBYWo jPsxBi"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-jhAzac gNnmPl"
    name="content-wrapper" />
  <footer
    className="sc-fBuWsC jsOlaO" />
</div>
`;
